package factorymethod;

public class ConcreteProductA extends Product{
}
