package factorymethod;

public class ConcreteProductB extends Product{
}
