package factorymethod;

public abstract class Product {
}
